--- a/Master/index.html
+++ b/Master/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Code Quiz</title>
+    <title>Coding Quiz</title>
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
   </head>
 
   <body>
-    <div class="scores"><a href="scores.html">View Highscores</a></div>
+    <div class="scores"><a href="highscores.html">View Highscores</a></div>
 
     <div class="timer">Time: <span id="time">0</span></div>
 
@@ -18,7 +18,9 @@
       <div id="start-screen" class="start">
         <h1>Coding Quiz Challenge</h1>
         <p>
-          This is a quiz to test your knowledge thus far. You will have 5 questions to answer. You have a set time to complete the quiz and will be deducted time for each incorrect answer.
+          Try to answer the following code-related questions within the time
+          limit. Keep in mind that incorrect answers will penalize your
+          score/time by ten seconds!
         </p>
         <button id="start">Start Quiz</button>
       </div>
@@ -29,7 +31,7 @@
       </div>
 
       <div id="end-screen" class="hide">
-        <h2>Finished!</h2>
+        <h2>All done!</h2>
         <p>Your final score is <span id="final-score"></span>.</p>
         <p>
           Enter initials: <input type="text" id="initials" max="3" />
@@ -40,7 +42,7 @@
       <div id="feedback" class="feedback hide"></div>
     </div>
 
-    <script src="./java/questions.js"></script>
-    <script src="./java/logic.js"></script>
+    <script src="../assets/js/questions.js"></script>
+    <script src="../assets/js/logic.js"></script>
   </body>
 </html>
